Bug 1119854: Crash when AcquireSync takes more than 10 seconds. r=jrmuizel